--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
             <h2>Projects</h2>
             <p>During my tenure at Conduent, I have led the modernization of several key products, including:</p>
             <ul>
-                <li>New York E-ZPass</li>
-                <li>Government Medicaid systems</li>
-                <li>Pharma systems</li>
-                <li>Banking lockbox</li>
+                <li>Financial Services: Auto Loan Servicing, Mortgage Services, Lockbox, Call Center, Payments, Insurance Claims inbound and adjudication</li>
+                <li>Health Care Solutions: Medicaid & Commercial Claims, Pharmacy Benefits Management, Disease Surveillance, Community Health, Pharma Patience Assistance Services & Hub, Provider Care Management, Payment Integrity Services & Subrogation</li>
+                <li>Transportation: Road Usage Charging / Tolling, Transit Fare Collection, Public Safety and Curbside</li>
+                <li>HRO/ TBO: Total Benefits Administration, Defined Benefits (Pension) and Defined Contributions</li>
+                <li>Commercial: Automated Document Management, Printmail</li>
             </ul>
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
