updated contact us

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
             <h2>Contact</h2>
             <p>If you would like to get in touch, please reach out via LinkedIn or email.</p>
             <p><a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a></p>
+            <p><a href="rahulgupta_33@yahoo.com</a></p>
         </section>
     </div>
 
