--- a/index.html
+++ b/index.html
@@ -190,9 +190,13 @@
         <section id="contact" class="section">
             <h2>Contact</h2>
             <p>If you would like to get in touch, please reach out via LinkedIn or email.</p>
-            <p><a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a></p>
-            <p><a href="rahulgupta_33@yahoo.com</a></p>
+            <p>
+                <a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a> |
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
+                <a href="mailto:rahul.gupta@outlook.com">rahul.gupta@outlook.com</a>
+            </p>
         </section>
+
     </div>
 
     <footer>
