--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                 <ul>
                     <li><a href="#bio">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#blog">Blog</a></li>
@@ -146,6 +147,23 @@
                 <li>Commercial: Automated Document Management, Printmail</li>
             </ul>
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
+        </section>
+
+        <section id="achievements" class="section">
+            <h2>Achievements</h2>
+            <ul>
+                <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
+                <li>Increased re-use of standard products from less than 10% to 70%.</li>
+                <li>Reduced technology spend from $1.45B to $900M through a $500M capex product modernization & optimization program.</li>
+                <li>Managed $1B payments in a year for 22 different states and millions of participants by crafting a vision for blockchain and ledger-based technologies.</li>
+                <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
+                <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
+                <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
+                <li>Developed and launched 25+ AI, ML, and analytics add-on products to enhance core vertical offerings.</li>
+                <li>Contributed to 380+ active patents in computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
+                <li>Transitioned from 300+ bespoke platforms to 100+ industry-standard technology products, saving $450M in IT costs.</li>
+                <li>Consolidated 102 data centers to less than 20 and increased cloud adoption from less than 10% to 60%.</li>
+            </ul>
         </section>
 
         <section id="services" class="section">
