--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         nav #menu {
             display: none;
             position: absolute;
-            top: 0;
+            top: 70px;
             left: 0;
             width: 200px;
             background: #333;
@@ -95,4 +95,71 @@
                 background: #333;
                 color: #fff;
                 border: none;
-               
+                font-size: 16px;
+            }
+            nav #menu {
+                display: none;
+            }
+        }
+    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("menuToggle").onclick = function() {
+                var menu = document.getElementById("menu");
+                if (menu.style.display === "block") {
+                    menu.style.display = "none";
+                } else {
+                    menu.style.display = "block";
+                }
+            };
+        });
+    </script>
+</head>
+<body>
+    <header>
+        <div id="branding">
+            <h1>Rahul Gupta</h1>
+            <p>Chief Technology Officer at Conduent</p>
+        </div>
+        <nav>
+            <button id="menuToggle">☰ Menu</button>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="testimonials.html">Testimonials</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <div id="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="achievements.html">Achievements</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container">
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <p>If you would like to get in touch, please reach out via LinkedIn or email.</p>
+            <p>
+                <a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a> |
+                <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
+                <a href="mailto:rahul.gupta@outlook.com">rahul.gupta@outlook.com</a>
+            </p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
