--- a/achievements.html
+++ b/achievements.html
@@ -65,7 +65,7 @@
         nav #menu {
             display: none;
             position: absolute;
-            top: 0;
+            top: 70px;
             left: 0;
             width: 200px;
             background: #333;
@@ -98,10 +98,22 @@
                 font-size: 16px;
             }
             nav #menu {
-                display: block;
+                display: none;
             }
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("menuToggle").onclick = function() {
+                var menu = document.getElementById("menu");
+                if (menu.style.display === "block") {
+                    menu.style.display = "none";
+                } else {
+                    menu.style.display = "block";
+                }
+            };
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -156,16 +168,5 @@
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        document.getElementById("menuToggle").onclick = function() {
-            var menu = document.getElementById("menu");
-            if (menu.style.display === "block") {
-                menu.style.display = "none";
-            } else {
-                menu.style.display = "block";
-            }
-        }
-    </script>
 </body>
 </html>
