--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         nav #menu {
             display: none;
             position: absolute;
-            top: 0;
+            top: 70px;
             left: 0;
             width: 200px;
             background: #333;
@@ -98,7 +98,7 @@
                 font-size: 16px;
             }
             nav #menu {
-                display: block;
+                display: none;
             }
         }
         .flex-container {
@@ -117,6 +117,18 @@
             flex: 1;
         }
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("menuToggle").onclick = function() {
+                var menu = document.getElementById("menu");
+                if (menu.style.display === "block") {
+                    menu.style.display = "none";
+                } else {
+                    menu.style.display = "block";
+                }
+            };
+        });
+    </script>
 </head>
 <body>
     <header>
@@ -133,6 +145,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div id="menu">
                 <ul>
@@ -164,16 +177,5 @@
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
     </footer>
-
-    <script>
-        document.getElementById("menuToggle").onclick = function() {
-            var menu = document.getElementById("menu");
-            if (menu.style.display === "block") {
-                menu.style.display = "none";
-            } else {
-                menu.style.display = "block";
-            }
-        }
-    </script>
 </body>
 </html>
