--- a/blog.html
+++ b/blog.html
@@ -66,8 +66,7 @@
             display: none;
             position: absolute;
             top: 70px;
-            left: 0;
-            width: 200px;
+            right: 0;
             background: #333;
             color: #fff;
             padding: 20px;
@@ -207,4 +206,6 @@
 
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
-    </footer
+    </footer>
+</body>
+</html>
