--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,7 @@
             display: none;
             position: absolute;
             top: 70px;
-            left: 0;
-            width: 200px;
+            right: 0;
             background: #333;
             color: #fff;
             padding: 20px;
