--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer at Conduent</p>
+            <p>Chief Technology & Product Officer</p>
         </div>
         <nav>
             <button id="menuToggle">☰ Menu</button>
@@ -152,7 +152,7 @@
             <p>
                 <a href="https://www.linkedin.com/in/rahulguptaconduent/">LinkedIn</a> |
                 <a href="mailto:rahulgupta_33@yahoo.com">rahulgupta_33@yahoo.com</a> |
-                <a href="mailto:rahul.gupta@outlook.com">rahul.gupta@outlook.com</a>
+                <a href="mailto:rahul.gupta@outlook.com">rahul.guptac@outlook.com</a>
             </p>
         </section>
     </div>
