--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
-    <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
+    <meta name="description" content="Rahul Gupta, CTO , offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance">
     <meta name="author" content="Rahul Gupta">
     <style>
@@ -143,7 +143,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer at Conduent</p>
+            <p>Chief Technology & Product Officer</p>
         </div>
         <nav>
             <button id="menuToggle">☰ Menu</button>
