--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer at Conduent</p>
+            <p>Chief Technology & Product Officer</p>
         </div>
         <nav>
             <button id="menuToggle">☰ Menu</button>
