--- a/achievements.html
+++ b/achievements.html
@@ -86,7 +86,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer at Conduent</p>
+            <p>Chief Technology & Product Officer</p>
         </div>
         <nav>
             <ul>
