--- a/index.html
+++ b/index.html
@@ -65,57 +65,6 @@
             text-align: center;
             padding: 10px 0;
         }
-        nav #menuToggle {
-            display: none;
-        }
-        nav #menu {
-            display: none;
-            position: absolute;
-            top: 50px;
-            right: 0;
-            background: #333;
-            color: #fff;
-            padding: 20px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-            z-index: 1000;
-        }
-        nav #menu ul {
-            list-style: none;
-            padding: 0;
-        }
-        nav #menu li {
-            padding: 10px 0;
-            border-bottom: 1px solid #fff;
-        }
-        nav #menu li:last-child {
-            border-bottom: none;
-        }
-        @media (max-width: 768px) {
-            .container {
-                width: 95%;
-                margin: auto;
-            }
-            header ul {
-                display: none;
-            }
-            nav #menuToggle {
-                display: block;
-                cursor: pointer;
-                padding: 10px;
-                background: #333;
-                color: #fff;
-                border: none;
-                font-size: 16px;
-            }
-            nav #menu {
-                display: block;
-                width: 100%;
-            }
-            nav #menu ul {
-                display: block;
-                text-align: left;
-            }
-        }
         .flex-container {
             display: flex;
             align-items: flex-start;
@@ -131,28 +80,40 @@
         .flex-container div {
             flex: 1;
         }
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                margin: auto;
+            }
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+            header ul {
+                flex-direction: column;
+            }
+            header li {
+                padding: 10px 0;
+                border: none;
+            }
+            .flex-container {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .flex-container img {
+                margin: 0 0 20px 0;
+            }
+        }
     </style>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            document.getElementById("menuToggle").onclick = function() {
-                var menu = document.getElementById("menu");
-                if (menu.style.display === "block") {
-                    menu.style.display = "none";
-                } else {
-                    menu.style.display = "block";
-                }
-            };
-        });
-    </script>
 </head>
 <body>
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology & Product Officer</p>
+            <p>Chief Technology Officer</p>
         </div>
         <nav>
-            <button id="menuToggle">☰ Menu</button>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -162,17 +123,6 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div id="menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="achievements.html">Achievements</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
         </nav>
     </header>
 
